# pihuddisplay

./: .gitignore  .gitmodules  CMakeLists.txt  Dashboard.qmlproject  Dashboard.qmlproject.qtds  README.md  main.qml  qmlmodules  qtquickcontrols2.conf
asset_imports/: CMakeLists.txt
asset_imports/Quick3DAssets/: CMakeLists.txt
asset_imports/Quick3DAssets/Volkslogo/: CMakeLists.txt  Volkslogo.hints  Volkslogo.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Volkslogo/meshes/: uploads_files_122684_volk__1_.mesh  uploads_files_122684_volk__1__002.mesh
asset_imports/Quick3DAssets/Vwgolf/: CMakeLists.txt  Vwgolf.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Vwgolf/meshes/: antena.mesh  antifogg02.mesh  antifogg1.mesh  bOLTS.mesh  bOLTS01.mesh  bOLTS02.mesh  bOLTS03.mesh  bRAKE_DISC.mesh  bRAKE_DISC01.mesh  bRAKE_DISC02.mesh  bRAKE_DISC03.mesh  back_light.mesh  back_light_glass.mesh  back_number.mesh  back_wiper.mesh  brake.mesh  brake01.mesh  brake02.mesh  brake03.mesh  dishboard.mesh  doors_panel.mesh  floor_gearbox_panel.mesh  front_logo.mesh  front_number.mesh  gearbox.mesh  golf_text.mesh  grile_bamper.mesh  grille__.mesh  grille_front.mesh  instrument_panel.mesh  interior.mesh  light_bmp_bc.mesh  light_front_left.mesh  light_front_right.mesh  logo_back.mesh  logo_st_wheel.mesh  logobase.mesh  miror_a__.mesh  mirror_b.mesh  object06.mesh  (+19 more)
content/: App.qml  CMakeLists.txt  CarLayout.qml  CircularSlider.qml  Clock.qml  CruisingInfo.qml  LogoLayout.qml  MusicInfo.qml  MusicLyrics.qml  PairingScreen.qml  Screen01.qml  Screen02.qml  Screen03.qml  Screen04.qml  Screen05.qml  Settings.qml  SpotifyAuth.qml
imports/: CMakeLists.txt
imports/Dashboard/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  qmldir
imports/Dashboard/designer/: plugin.metainfo
src/: GPIO.cpp  GPIO.h  app_environment.h  bluetoothagent.h  bluetoothmanager.cpp  bluetoothmanager.h  bluezdeviceconnection.cpp  bluezdeviceconnection.h  bluezdevicemonitor.cpp  bluezdevicemonitor.h  bluezdevicepairer.cpp  bluezdevicepairer.h  carcruisingdataexposer.cpp  carcruisingdataexposer.h  clockexposer.cpp  clockexposer.h  elmconnection.cpp  elmconnection.h  ibutton.h  import_qml_plugins.h  main.cpp  mockbutton.cpp  mockbutton.h  pigpiobutton.cpp  pigpiobutton.h  qrimage.cpp  qrimage.h  qrimageprovider.cpp  qrimageprovider.h  rpmexposer.cpp  rpmexposer.h  rpmmock.cpp  rpmmock.h  speedexposer.cpp  speedexposer.h  speedmock.cpp  speedmock.h  spotifyauthmanager.cpp  spotifyauthmanager.h  spotifylyricsapi.cpp  (+5 more)
src/elm/: elm.cpp  elm.h  serialdevice.cpp  serialdevice.h
